[project]
name = "super-coder-proxy"
version = "1.0.0"
description = "Unified OpenAI-compatible LLM proxy — routes to Ollama, Claude CLI, GitHub Copilot CLI, Gemini Web, and Gemini API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "gemini-webapi>=1.21",
    "browser-cookie3>=0.20",
]

[project.scripts]
super-coder-proxy = "proxy.server:main"
